# nintendo-shop

./: .dockerignore  .gitignore  Cargo.toml  README.md
config/: sys-graphql.toml
config/templates/: sys-graphql.toml
deploy/: build.sh
deploy/all-in-one/: Dockerfile
idl/: cart.thrift  checkout.thrift  common.thrift  product.thrift
migrations/2023-04-19-233159_shop/: down.sql  up.sql
scripts/crawler/: consts.py  main.py
src/: lib.rs  schema.rs
src/domain/: mod.rs
src/domain/cart/: mod.rs  model.rs
src/domain/cart/mutation/: add_to_cart.rs  create_cart.rs  mod.rs  remove_from_cart.rs
src/domain/cart/query/: get_cart.rs  mod.rs
src/domain/checkout/: mod.rs  model.rs
src/domain/checkout/mutation/: mod.rs  submit_information.rs
src/domain/checkout/query/: get_checkout.rs  get_checkout_by_cart_id.rs  list_payments.rs  list_shipping.rs  mod.rs
src/domain/product/: mod.rs  model.rs
src/domain/product/mutation/: create_product.rs  mod.rs
src/domain/product/query/: get_product.rs  list_products.rs  mod.rs
src/graphql/: mod.rs  sys.rs
src/graphql/model/: cart.rs  checkout.rs  common.rs  mod.rs  product.rs
src/graphql/modelv1/: cart.rs  common.rs  mod.rs  product.rs
src/infra/: config.rs  error.rs  id.rs  mod.rs  mqsrs.rs  resolver.rs
src/rpc/: mod.rs  product.rs
volo-gen/: Cargo.toml  volo.yml
